2008-04-28  Michael Smith <msmith@songbirdnest.com>

	* gst/playback/test4.c:
	* gst/playback/test5.c:
	* gst/playback/test6.c:
	* gst/tcp/gstmultifdsink.c:
	  Include stdlib.h and unistd.h only if the appropriate HAVE_*_H macro
	  is defined.

2008-04-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.h:
	Clarify some docs.

	* gst-libs/gst/audio/gstbaseaudiosrc.c: (slave_method_get_type),
	(gst_base_audio_src_class_init), (gst_base_audio_src_init),
	(gst_base_audio_src_set_slave_method),
	(gst_base_audio_src_get_slave_method),
	(gst_base_audio_src_set_property),
	(gst_base_audio_src_get_property), (gst_base_audio_src_create):
	* gst-libs/gst/audio/gstbaseaudiosrc.h:
	Add property and methods for selecting the clock slave method in the
	source, like in the sink.
	We only implement "none" and "re-timestamp" for now.
	API: gst_base_audio_src_set_slave_method()
	API: gst_base_audio_src_get_slave_method()

2008-04-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstrtpbuffer.c:
	Fix the docs about the seqnum compare function, it returns a difference.

2008-04-24  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/alsa/gstalsadeviceprobe.c:
	(gst_alsa_get_device_list): Don't return before freeing up
	the allocated structures.

2008-04-24  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstplaybin.c:
	  Remove obsolete streaminfo code and fix a leak. Fixes #529546

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* ext/ogg/gstoggdemux.c:
	  Revert the event part, that should not go in.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* ext/ogg/gstoggdemux.c:
	  Don't leak GstPluginFeatures when filtering.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/xvimagesink.c:
	  Add some logging for cases when grabbing the xv failed.

2008-04-21  David Schleef  <ds@schleef.org>

	* ext/ogg/gstoggmux.c:
	  Update Ogg/Dirac muxing.  Removes the weird "KW-DIRAC" bos